--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,12 @@ platform:
   arch: amd64
 
 steps:
+  - name: submodules
+    image: alpine/git
+    commands:
+      - git submodule init
+      - 'git config --global url."https://github.com/".insteadOf git@github.com:'
+      - "git submodule update --recursive --remote"
   - name: build and publish
     image: plugins/docker
     settings:
@@ -33,6 +39,12 @@ platform:
   arch: arm64
 
 steps:
+  - name: submodules
+    image: alpine/git
+    commands:
+      - git submodule init
+      - 'git config --global url."https://github.com/".insteadOf git@github.com:'
+      - "git submodule update --recursive --remote"
   - name: build and publish
     image: plugins/docker
     settings:
@@ -62,6 +74,12 @@ platform:
   arch: amd64
 
 steps:
+  - name: submodules
+    image: alpine/git
+    commands:
+      - git submodule init
+      - 'git config --global url."https://github.com/".insteadOf git@github.com:'
+      - "git submodule update --recursive --remote"
   - name: build and publish
     image: plugins/docker
     settings:
@@ -85,6 +103,12 @@ platform:
   arch: arm64
 
 steps:
+  - name: submodules
+    image: alpine/git
+    commands:
+      - git submodule init
+      - 'git config --global url."https://github.com/".insteadOf git@github.com:'
+      - "git submodule update --recursive --remote"
   - name: build and publish
     image: plugins/docker
     settings:
