--- a/.drone.yml
+++ b/.drone.yml
@@ -15,16 +15,16 @@ steps:
   - name: build and publish
     image: plugins/docker
     settings:
-      registry: registry.dev.onetask.ai
+      registry: registry.dev.kern.ai
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
-      repo: "registry.dev.onetask.ai/code-kern-ai/refinery-parent-images"
+      repo: "registry.dev.kern.ai/code-kern-ai/refinery-parent-images"
       tags: ["${DRONE_COMMIT_SHA}-mini", "${DRONE_COMMIT_BRANCH}-mini"]
       cache_from:
-        - "registry.dev.onetask.ai/code-kern-ai/refinery-parent-images:dev-mini"
-        - "registry.dev.onetask.ai/code-kern-ai/refinery-parent-images:${DRONE_COMMIT_BRANCH}-mini"
+        - "registry.dev.kern.ai/code-kern-ai/refinery-parent-images:dev-mini"
+        - "registry.dev.kern.ai/code-kern-ai/refinery-parent-images:${DRONE_COMMIT_BRANCH}-mini"
 
 trigger:
   event:
@@ -48,16 +48,16 @@ steps:
   - name: build and publish
     image: plugins/docker
     settings:
-      registry: registry.dev.onetask.ai
+      registry: registry.dev.kern.ai
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
-      repo: "registry.dev.onetask.ai/code-kern-ai/refinery-parent-images"
+      repo: "registry.dev.kern.ai/code-kern-ai/refinery-parent-images"
       tags: ["${DRONE_COMMIT_SHA}-mini-arm64", "${DRONE_COMMIT_BRANCH}-mini-arm64"]
       cache_from:
-        - "registry.dev.onetask.ai/code-kern-ai/refinery-parent-images:dev-mini-arm64"
-        - "registry.dev.onetask.ai/code-kern-ai/refinery-parent-images:${DRONE_COMMIT_BRANCH}-mini-arm64"
+        - "registry.dev.kern.ai/code-kern-ai/refinery-parent-images:dev-mini-arm64"
+        - "registry.dev.kern.ai/code-kern-ai/refinery-parent-images:${DRONE_COMMIT_BRANCH}-mini-arm64"
 
 trigger:
   branch:
